tests/ui/basic/assert_fail.stderr
error: assertion failed
 --> tests/ui/basic/assert_fail.rs:5:16
  |
5 |         assert!(false)
  |                ^^^^^^^
