tests/ui/basic/assert_fail.rs
use metamatch::eval;

fn main() {
    eval! {
        assert!(false)
    };
}
